Fixed whitespace issue under player containers in the no-button layouts.

--- a/src/App.css
+++ b/src/App.css
@@ -72,13 +72,6 @@
   padding-bottom: 0px;
 }
 
-.no-margin {
-  margin-right: 0px;
-  margin-left: 0px;
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
-
 .left-margin {
   margin-left: 10px;
 }
